style.css
body {
    display: flex;
    flex-direction: column;
    font-family: 'Roboto', sans-serif;
    background-color: black;
    margin-left: 6em;
    margin-right: 6em;
}

.header, .hero {
    display: flex;
    justify-content: space-between;
    align-items: center;
    background-color: #1F2937;
    padding: 0 15%;
}

#header-logo {
    font-size: 24px;
    font-weight: 900;
    color: #F9FAF8;
}

ul {
    display: flex;
    list-style: none;
    font-size: 18px;
    gap: 32px;
}

li {
    padding: 0;
    margin: 0;
}

a {
    color: white;
    text-decoration: none;
}

.hero {
    padding-top: 5em;
    padding-bottom: 5em;
    display: flex;
    flex: 1;
    justify-content: space-between;
}

#left, #right {
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    gap: 8px;
    max-width: 500px;
}

#hero-main-text {
    font-size: 48px;
    font-weight: bolder;
    color: #F9FAF8;
}

#hero-subtext {
    font-size: 18px;
    color: #E5E7EB;
}

#hero-signup-btn {
    background-color: #3882F6;
    color: white;
    font-weight: 600;
    border-radius: 8px;
    border: 1px;
    padding: 7px 24px;
}

#hero-image {
    width: 500px;
    height: auto;
}

.information {
    background-color: white;
    text-align: center;
}

#info-header {
    font-size: 36px;
    font-weight: bolder;
    color: #1F2937;
    margin-top: 1em;
    margin-bottom: 1em;
}

.info_subtext {
    display: flex;
    flex-direction: row;
    margin: 1em 30% 7em 30%;
    justify-content: space-between;
}

.container {
    display: flex;
}

.info_subtext .container {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 115px;
    gap: 8px;
}

.info-img {
    width: 100px;
    height: auto;
    border: 3px solid #3882F6;
    border-radius: 10px;
}

.quotes {
    background-color: #E5E7EB;
    display: flex;
    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 36px;
    font-weight: 100;
    color: #1F2937;
    justify-content: center
}

.quotes .container {
    flex-direction: column;
    margin: 4em 30% 4em 30%;
}

#quote-author {
    margin-left: auto;
    font-weight: 800;
    font-size: 28px;
}

